(rule
 (targets cilpp.tex ./__html__cil__examples)
 (deps (alias_rec ../cilly) (package goblint-cil))
 (action (progn
  (system "mkdir -p ./html/cil/examples")
  (with-stdout-to cilpp.tex (run %{bin:perl} %{dep:cilcode.pl} %{dep:cil.tex}))
  (system "rm -r ./__html__cil__examples || true")
  (system "mv ./html/cil/examples ./__html__cil__examples"))))
