(include_subdirs unqualified)

(library
  (public_name goblint-cil)
  (name goblintCil)
  (libraries zarith findlib dynlink unix str stdlib-shims)
  (modules (:standard \ main ciloptions machdepConfigure modelConfigure))
)

(executable
 (name machdepConfigure)
 (modules machdepConfigure)
 (libraries dune-configurator))

(rule
 (target machdep-config.h)
 (action (run ./machdepConfigure.exe)))

(rule
 (deps machdep-config.h machdep-ml.c)
 (target machdep-ml.exe)
 (action (run %{read-lines:../bin/real-gcc} -D_GNUCC machdep-ml.c -o %{target})))

; for Cilly.pm
(executable
 (name modelConfigure)
 (modules modelConfigure)
 (libraries dune-configurator))

; for Cilly.pm
(rule
 (deps machdep-config.h machdep-ml.c)
 (target gcc32model)
 (action (with-stdout-to %{target} (run ./modelConfigure.exe --real-gcc %{read-lines:../bin/real-gcc} -m 32))))

; for Cilly.pm
(rule
 (deps machdep-config.h machdep-ml.c)
 (target gcc64model)
 (action (with-stdout-to %{target} (run ./modelConfigure.exe --real-gcc %{read-lines:../bin/real-gcc} -m 64))))

(rule
 (target machdep.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version}
              %{dep:machdep.cppo.ml} -x machdep:./%{dep:machdep-ml.exe}
              -o %{target})))

(ocamllex formatlex)
(ocamlyacc formatparse)

(executable
 (name main)
 (modules main ciloptions)
 (modes native)
 (libraries goblint-cil)
 (flags :standard -linkall))

(env
  (dev
    (flags (:standard -warn-error -A -w -unused-var-strict)) ; https://dune.readthedocs.io/en/stable/faq.html#how-to-make-warnings-non-fatal
  )
)
