(install
 (section lib_root)
 (files
  (App/Cilly.pm as perl5/App/Cilly.pm)
  (App/Cilly/CilCompiler.pm as perl5/App/Cilly/CilCompiler.pm)
  (App/Cilly/CilConfig.pm as perl5/App/Cilly/CilConfig.pm)
  (App/Cilly/KeptFile.pm as perl5/App/Cilly/KeptFile.pm)
  (App/Cilly/OutputFile.pm as perl5/App/Cilly/OutputFile.pm)
  (App/Cilly/TempFile.pm as perl5/App/Cilly/TempFile.pm)
 ))
