(rule
 (deps (alias_rec ../../../doc) (sandbox none))
 (targets ./api)
 (action (system "cp -rL ../../../_doc/_html ./api")))

(rule
 (deps ../../__html__cil__examples)
 (targets ./examples)
 (action (system "cp -rL ../../__html__cil__examples ./examples")))

(rule
 (alias heveadoc)
 (deps ../../cilpp.tex ./examples ./api)
 (action (progn
  (write-file cil.version.tex "\\def\\cilversion{$(CIL_VERSION)}\n") ; TODO: actual version
  (run %{bin:hevea} -exec xxdate.exe ../../cilpp)
  (run %{bin:hevea} -exec xxdate.exe ../../cilpp)
  (system "mv cilpp.html cil.html")
  (run %{bin:hacha} -o ciltoc.html cil.html)
  (copy ../../index.html index.html)
  (copy ../../header.html header.html))))
 