(rule
 (deps (alias_rec ../../../doc) (sandbox none))
 (targets ./api)
 (action (system "cp -rL ../../../_doc/_html ./api")))

(rule
 (deps ../../__html__cil__examples)
 (targets ./examples)
 (action (system "cp -rL ../../__html__cil__examples ./examples")))

(rule
 (alias heveadoc)
 (deps ../../cilpp.tex ./examples ./api index.html header.html)
 (action (progn
  (run %{bin:hevea} -exec xxdate.exe ../../cilpp)
  (run %{bin:hevea} -exec xxdate.exe ../../cilpp)
  (system "mv cilpp.html cil.html")
  (run %{bin:hacha} -o ciltoc.html cil.html))))
 