(rule
 (alias cilly)
 (target Cilly.pm)
 (action (progn
  (copy %{dep:Cilly.pm.in} %{target})
  (bash "sed -i -e \"s|nogcc32model|`cat %{dep:../../../src/gcc32model}`|\" %{target}")
  (bash "sed -i -e \"s|nogcc64model|`cat %{dep:../../../src/gcc64model}`|\" %{target}"))))

(install
 (section lib_root)
 (files
  (Cilly.pm as perl5/App/Cilly.pm)
  (Cilly/CilCompiler.pm as perl5/App/Cilly/CilCompiler.pm)
  (Cilly/CilConfig.pm as perl5/App/Cilly/CilConfig.pm)
  (Cilly/KeptFile.pm as perl5/App/Cilly/KeptFile.pm)
  (Cilly/OutputFile.pm as perl5/App/Cilly/OutputFile.pm)
  (Cilly/TempFile.pm as perl5/App/Cilly/TempFile.pm)))
